tests/fixtures/errors/unknown_function.ksr
// Unknown function: bogus is not a built-in function
param x = 1.0;
node y = bogus(@x);
